platform/vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer   # or letsencrypt later
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - vault.greiner.home
      secretName: vault-tls
  rules:
    - host: vault.greiner.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
